--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>xxl-job-core</module>
         <module>xxl-job-admin-pg</module>
         <module>xxl-job-executor-samples</module>
+        <module>xxl-job-admin-client</module>
     </modules>
 
     <properties>
