--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>xxl-job-admin-pg</module>
         <module>xxl-job-executor-samples</module>
         <module>xxl-job-admin-client</module>
+        <module>xxl-job-admin-reactive-client</module>
+        <module>xxl-job-admin-client-common</module>
     </modules>
 
     <properties>
