--- a/xxl-job-admin-reactive-client/pom.xml
+++ b/xxl-job-admin-reactive-client/pom.xml
@@ -36,13 +36,19 @@
         </dependency>
         <dependency>
             <groupId>com.xuxueli</groupId>
-            <artifactId>xxl-job-core</artifactId>
+            <artifactId>xxl-job-admin-client-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
             <version>${projectreactor.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty-http</artifactId>
+            <version>${projectreactor.netty.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
