--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.xuxueli</groupId>
     <artifactId>xxl-job</artifactId>
-    <version>2.3.1</version>
+    <version>2.3.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
@@ -148,6 +148,15 @@
                 </repository>
             </distributionManagement>
         </profile>
+            <profile>
+                <id>archetype</id>
+                <distributionManagement>
+                    <snapshotRepository>
+                        <id>archetype</id>
+                        <url>https://atrd01.thunderst.com/repos/repository/maven-snapshots/</url>
+                    </snapshotRepository>
+                </distributionManagement>
+            </profile>
     </profiles>
 
 </project>
