--- a/xxl-job-admin-client/pom.xml
+++ b/xxl-job-admin-client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>xxl-job</artifactId>
         <groupId>com.xuxueli</groupId>
-        <version>2.3.1</version>
+        <version>2.3.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>xxl-job-admin-client</artifactId>
