--- a/xxl-job-admin-client-common/pom.xml
+++ b/xxl-job-admin-client-common/pom.xml
@@ -42,7 +42,12 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main/kotlin</sourceDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/kotlin</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
