--- a/xxl-job-admin-reactive-client/pom.xml
+++ b/xxl-job-admin-reactive-client/pom.xml
@@ -91,6 +91,7 @@
     </dependencies>
 
     <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
         <plugins>
             <plugin>
                 <artifactId>kotlin-maven-plugin</artifactId>
