--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,6 @@
         <module>xxl-job-core</module>
         <module>xxl-job-admin-pg</module>
         <module>xxl-job-executor-samples</module>
-        <module>xxl-job-admin-client</module>
-        <module>xxl-job-admin-reactive-client</module>
-        <module>xxl-job-admin-client-common</module>
     </modules>
 
     <properties>
@@ -148,35 +145,31 @@
                 </repository>
             </distributionManagement>
         </profile>
-            <profile>
-                <id>archetype</id>
-                <distributionManagement>
-                    <snapshotRepository>
-                        <id>archetype</id>
-                        <url>https://atrd01.thunderst.com/repos/repository/maven-snapshots/</url>
-                    </snapshotRepository>
-                </distributionManagement>
-                <build>
-                    <plugins>
-                        <plugin>
-                            <artifactId>maven-source-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>attach-sources</id>
-                                    <phase>deploy</phase>
-                                    <goals><goal>jar-no-fork</goal></goals>
-                                    <configuration>
-                                        <attach>true</attach>
-                                        <includes>
-                                            <include>**/*.java</include>
-                                            <include>**/*.kt</include>
-                                        </includes>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                        </plugin>
-                    </plugins>
-                </build>
-            </profile>
+        <profile>
+            <id>archetype</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                                <configuration>
+                                    <attach>true</attach>
+                                    <includes>
+                                        <include>**/*.java</include>
+                                        <include>**/*.kt</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
