--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
-                                <phase>deploy</phase>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>jar-no-fork</goal>
                                 </goals>
